back to bootstrap and removed header components

--- a/src/components/Welcome/Welcome.css
+++ b/src/components/Welcome/Welcome.css
@@ -1,4 +1,113 @@
-#welcomeText{
-    font-weight: bold;
-    font-size: 50px;
+.header-setting {
+    color: #282c34;
+}
+
+#myh1 {
+    font-size: 8vh;
+}
+
+#myh1-2 {
+    font-size: 8vh;
+    color: #2e539b;
+    display: inline;
+}
+
+.btn-bar {
+    margin-top: 60px;
+}
+
+.login-btn {
+    margin-right: 5px;
+}
+
+.signup-btn {
+    margin-left: 5px;
+}
+
+/* Smartphones (portrait and landscape) ----------- */
+@media only screen
+and (min-device-width : 320px)
+and (max-device-width : 480px) {
+/* Styles */
+.header-setting {
+    margin-top: 100px;
+}
+}
+
+/* Smartphones (landscape) ----------- */
+@media only screen
+and (min-width : 321px) {
+/* Styles */
+.header-setting {
+    margin-top: 100px;
+}
+}
+
+/* Smartphones (portrait) ----------- */
+@media only screen
+and (max-width : 320px) {
+/* Styles */
+.header-setting {
+    margin-top: 100px;
+}
+}
+
+/* iPads (portrait and landscape) ----------- */
+@media only screen
+and (min-device-width : 768px)
+and (max-device-width : 1024px) {
+/* Styles */
+.header-setting {
+    margin-top: 180px;
+}
+}
+
+/* iPads (landscape) ----------- */
+@media only screen
+and (min-device-width : 768px)
+and (max-device-width : 1024px)
+and (orientation : landscape) {
+/* Styles */
+.header-setting {
+    margin-top: 180px;
+}
+}
+
+/* iPads (portrait) ----------- */
+@media only screen
+and (min-device-width : 768px)
+and (max-device-width : 1024px)
+and (orientation : portrait) {
+/* Styles */
+.header-setting {
+    margin-top: 150px;
+}
+}
+
+/* Desktops and laptops ----------- */
+@media only screen
+and (min-width : 1224px) {
+/* Styles */
+.header-setting {
+    margin-top: 180px;
+}
+}
+
+/* Large screens ----------- */
+@media only screen
+and (min-width : 1824px) {
+/* Styles */
+.header-setting {
+    margin-top: 180px;
+}
+}
+
+/* iPhone 4 ----------- */
+@media
+only screen and (-webkit-min-device-pixel-ratio : 1.5),
+only screen and (min-device-pixel-ratio : 1.5) {
+/* Styles */
+.header-setting {
+    margin-top: 80px;
+}
 }
