--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,14 @@
 body {
+  background-image: url('./images/welcomebg.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  height: 100%;
+  width: 100%;
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -17,3 +27,4 @@ code {
   background-color: rgba(142, 182, 214, 0.795);
   text-align: center;
 }
+
