--- a/src/components/Signup/Signup.css
+++ b/src/components/Signup/Signup.css
@@ -6,13 +6,7 @@
   .signup-container {
     display: table;
     position: absolute;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+    background-color: rgba(226, 226, 226, 0.719);
     height: 100vh;
     width: 100vw;
   }
