--- a/src/components/Welcome/Welcome.css
+++ b/src/components/Welcome/Welcome.css
@@ -1,135 +1,116 @@
 .hero {
-    display: table;
-    position: relative;
-    background-position: center;
+  display: table;
+  position: relative;
+  background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-    padding: 150px 0;
-    color: #fff;
-    width: 100%;
-    height: 100vh;
-  }
+  padding: 150px 0;
+  color: #fff;
+  width: 100%;
+  height: 100vh;
+}
 
-  .hero:after {
-    content: '';
-    z-index: 0;
-    position: absolute;
-    background: rgba(0, 0, 0, 0.774);
-    width: 100%;
-    height: 100%;
-    left: 0;
-    top: 0;
-  }
+.hero:after {
+  content: "";
+  z-index: 0;
+  position: absolute;
+  background: rgba(0, 0, 0, 0.774);
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+}
 
-  .hero .container {
-    position: relative;
-    z-index: 1;
-    text-align: center;
-    display: table-cell;
-    vertical-align: middle;
-    width: 100%;
-  }
+.hero .container {
+  position: relative;
+  z-index: 1;
+  text-align: center;
+  display: table-cell;
+  vertical-align: middle;
+  width: 100%;
+}
 
-  .hero-brand:hover {
-    opacity: .75;
-  }
+.hero-brand:hover {
+  opacity: 0.75;
+}
 
-  .hero {
-    padding: 75px 0;
-  }
+.hero {
+  padding: 75px 0;
+}
 
-  .web-name {
-      margin-top: 80px;
-      font-family: 'Raleway', sans-serif;
-  }
+.web-name {
+  margin-top: 80px;
+  font-family: "Raleway", sans-serif;
+}
 
-  .tagline {
-    font-family: "Raleway", Helvetica, Arial, sans-serif;
-    font-size: 3vh;
-    margin: 45px 0 75px 0;
-    color: #fff;
-  }
+.tagline {
+  font-family: "Raleway", Helvetica, Arial, sans-serif;
+  font-size: 3vh;
+  margin: 45px 0 75px 0;
+  color: #fff;
+}
 
-  .btn-style {
-    font-family: "Roboto", Helvetica, Arial, sans-serif;
-  }
+.btn-style {
+  font-family: "Roboto", Helvetica, Arial, sans-serif;
+}
+
+.btn-admin {
+  margin-top: 40px;
+}
+
 
 /* Smartphones (portrait and landscape) ----------- */
-@media only screen
-and (min-device-width : 320px)
-and (max-device-width : 480px) {
-/* Styles */
-
+@media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
+  /* Styles */
 }
 
 /* Smartphones (landscape) ----------- */
-@media only screen
-and (min-width : 321px) {
-/* Styles */
-
+@media only screen and (min-width: 321px) {
+  /* Styles */
 }
 
 /* Smartphones (portrait) ----------- */
-@media only screen
-and (max-width : 320px) {
-/* Styles */
-
+@media only screen and (max-width: 320px) {
+  /* Styles */
 }
 
 /* iPads (portrait and landscape) ----------- */
-@media only screen
-and (min-device-width : 768px)
-and (max-device-width : 1024px) {
-/* Styles */
-
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+  /* Styles */
 }
 
 /* iPads (landscape) ----------- */
-@media only screen
-and (min-device-width : 768px)
-and (max-device-width : 1024px)
-and (orientation : landscape) {
-/* Styles */
-
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
+  /* Styles */
 }
 
 /* iPads (portrait) ----------- */
-@media only screen
-and (min-device-width : 768px)
-and (max-device-width : 1024px)
-and (orientation : portrait) {
-/* Styles */
-
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) {
+  /* Styles */
 }
 
 /* Desktops and laptops ----------- */
-@media only screen
-and (min-width : 1224px) {
-/* Styles */
-
+@media only screen and (min-width: 1224px) {
+  /* Styles */
 }
 
 /* Large screens ----------- */
-@media only screen
-and (min-width : 1824px) {
-/* Styles */
-
+@media only screen and (min-width: 1824px) {
+  /* Styles */
 }
 
 /* iPhone 4 ----------- */
-@media
-only screen and (-webkit-min-device-pixel-ratio : 1.5),
-only screen and (min-device-pixel-ratio : 1.5) {
-/* Styles */
-
+@media only screen and (-webkit-min-device-pixel-ratio: 1.5),
+  only screen and (min-device-pixel-ratio: 1.5) {
+  /* Styles */
 }
 
 @media (max-width: 61.9em) {
-.hero-brand {
+  .hero-brand {
     margin-bottom: 35px;
   }
   .tagline {
