--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,8 @@
 }
 
 .main-contain {
-  position: absolute;
-    top: 0; right: 0; bottom: 0; left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
 }
