--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -66,20 +66,24 @@
   background-color: white;
 }
 
+.flag-box, .type-box, .desc-box {
+  text-align: left;
+}
+
 .img-warning,
 .img-alert,
 .img-no-warning {
-  width: 19vw;
-  height: 26vh;
+  width: 13vw;
+  height: 20vh;
 }
 
 .weather-type {
-  width: 10vw;
-  height: 12vh;
+  width: 7.5vw;
+  height: 9vh;
 }
 
 .warning-description, .alert-description, .no-warning-description {
-  font-size: 2vh;
+  font-size: 2.8vh;
 }
 .ack-box {
   text-align: center;
