--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -73,17 +73,17 @@
 .img-warning,
 .img-alert,
 .img-no-warning {
-  width: 13vw;
-  height: 20vh;
+  width: 16vmin;
+  height: 21vmin;
 }
 
 .weather-type {
-  width: 7.5vw;
-  height: 9vh;
+  width: 12vmin;
+  height: 12.5vmin;
 }
 
 .warning-description, .alert-description, .no-warning-description {
-  font-size: 2.8vh;
+  font-size: 2.8vmin;
 }
 .ack-box {
   text-align: center;
@@ -97,6 +97,11 @@
 .ack-btn {
   margin-top: 5px;
   margin-bottom: 20px;
+}
+
+.license-box {
+  text-align: center;
+  margin-top: 50px;
 }
 
 /* Smartphones (portrait and landscape) ----------- */
