a few important changes

--- a/client/src/components/AdminHome/AdminHome.css
+++ b/client/src/components/AdminHome/AdminHome.css
@@ -1,8 +1,7 @@
 @import url(//db.onlinewebfonts.com/c/ca95c48955899f16fc852f1a8fe30b87?family=KGHAPPYSolidW00-Regular);
 
 .admin-back {
-  background-image: url("../../images/interlaced.png");
-  background-repeat: no-repeat;
+  background-color: rgba(226, 226, 226, 0.589);
   background-size: 100vmax;
 }
 
