added functionality to add or remove plot no, a new checklist item can be added as well in addition to remove, general bug fixes

--- a/client/src/components/UpdateChecklist/UpdateChecklist.css
+++ b/client/src/components/UpdateChecklist/UpdateChecklist.css
@@ -1,4 +1,10 @@
 .table-div-checklist {
     max-height: 550px;
     overflow: auto;
+    border: .5px solid gray;
+}
+
+.form-container {
+    padding-top: 30px;
+    margin-bottom: 30px;
 }
